# cognitive_tasks

./: .gitignore  README.md  Zadanie speeded GNG z feedbackiem_Specyfikacja.docx  behavioral_analysis.ipynb  main.py  pyproject.toml  requirements.txt  tmp.py
behavioral_analysis/: flankers.ipynb  flankers.py  monetary_incentive_delay.ipynb  monetary_incentive_delay.py
classes/: check_exit.py  experiment_info.py  feedback.py  load_data.py  ophthalmic_procedure.py  prepare_experiment.py  save_data.py  screen.py  show.py  show_info.py  triggers.py  triggers_common.py
classes/procedures/: ophthalmic_procedure.py  (+1 more)
config/: config.yaml  diamond_task.yaml  diamond_task_C.yaml  diamond_task_NC.yaml  diamond_task_training.yaml  diamond_task_with_images.yaml  flankers_hajcak2005_exp1.yaml  flankers_hajcak2005_exp1_short.yaml  flankers_hajcak2005_exp2.yaml  flankers_with_feedback.yaml  flankers_with_feedback_5_fixations.yaml  flankers_with_feedback_long_target.yaml  flankers_with_feedback_mouse.yaml  full.yaml  go_no_go.yaml  hajcak2005_exp1.yaml  hajcak2005_exp1_short.yaml  hajcak2005_exp2.yaml  hajcak_experiment1.yaml  hajcak_experiment1_shortened.yaml  hajcak_experiment2.yaml  monetary_incentive_delay.yaml  resting_state.yaml  topological_task.yaml
docs/: config.yaml
input_data/: topological_task.xlsx  topological_task_shuffled.csv  topological_task_training.csv
messages/: break10.txt  break11.txt  break2.txt  break3.txt  break4.txt  break5.txt  break6.txt  break7.txt  break8.txt  break9.txt  end.txt  end_training.txt  instruction.txt
stimulus/: flankers.txt
(+56 files in other folders)
